agregando los enlaces a los botones de los proyectos

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <section>
             <h2 id="skills" class="titulo fs-1 mt-4">Skills</h2>
             <div>
-                <h3 class="habilidades fs-4 m-4">Technical skills:</h3>
+                <h3 class="habilidades fs-4 m-4 mt-5">Technical skills:</h3>
                 <div class="cajaSkills mb-5">
                     <div>
                         <img src="img/git-alt-brands.svg" class="iconoSkill" alt="imagen de HTML5">
@@ -182,9 +182,11 @@
                     </div>    
                     <!-- <div>
                         <img src="img/nodejs.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Node.js</p>
                     </div>    
                     <div>
                         <img src="img/database-solid.svg" class="iconoSkill iconoSkillDataBase" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">MySQL y MongoDB</p>
                     </div>     -->
                 </div>    
                 <h3 class="habilidades fs-4 m-4">Soft skills:</h3>
@@ -272,6 +274,7 @@
             <h2 id="trabajos" class="titulo fs-1">Proyectos</h2>
             <div class="container">
                 <div id="proyectos" class="mt-4">
+                    <!-- Sitio web, creado como desafío y proyecto para el curso de desarrollo web de Coderhouse -->
                     <article id="proyectoCoderhouse" class="proyecto trans">
                         <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
                             <img src="./img/imagen-proyecto-coderhouse.jpg"
@@ -282,10 +285,15 @@
                             <p class="fs-4 mt-3 lead">Sitio Web</p>
                         </div>
                         <div>
-                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
-                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
+                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/proyecto-coderhouse" target="_blank">
+                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            </a>
                         </div>
                     </article>
+                    <!-- Portafolio hecho casi en su totalidad con bootstrap, para practicar este framework -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
                             <img src="./img/portafolio.png" alt="imagen de un portafolio de trabajos" class="img">
@@ -295,10 +303,15 @@
                             <p class="fs-4 mt-3 lead">Bootstrap 5</p>
                         </div>
                         <div>
-                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
-                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
+                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/bootstrap-portafolio" target="_blank">
+                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            </a>
                         </div>
                     </article>
+                    <!-- Agenda de clientes, realizada como desafío y proyecto para el curso de JavaScript de Coderhouse -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank">
                             <img src="./img/agenda.png" alt="" class="img">
@@ -308,10 +321,15 @@
                             <p class="fs-4 mt-3 lead">JavaScript</p>
                         </div>
                         <div>
-                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
-                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank">
+                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/agenda-de-clientes" target="_blank">
+                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            </a>
                         </div>
                     </article>
+                    <!-- Encriptador de texto, proyecto que forma parte de los challenges del programa ONE, de Oracle + Alura LATAM -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
                             <img src="./img/encriptador-img.png" alt="imagen de la aplicación del encriptador"
@@ -322,10 +340,15 @@
                             <p class="fs-4 mt-3 lead">JavaScript</p>
                         </div>
                         <div>
-                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
-                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
+                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/encriptador" target="_blank">
+                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            </a>
                         </div>
                     </article>
+                    <!-- Ahorcado, proyecto que forma parte de los challenges del programa ONE, de Oracle + Alura LATAM -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
                             <img src="./img/rope.png" alt="imagen de la aplicación del encriptador" class="img">
@@ -335,10 +358,15 @@
                             <p class="fs-4 mt-3 lead">JavaScript</p>
                         </div>
                         <div>
-                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
-                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
+                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/ahorcado-js" target="_blank">
+                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            </a>
                         </div>
                     </article>
+                    <!-- Ecommerce desarrollado con React, como desafío y proyecto del curso de React de Coderhouse -->
                     <article class="proyecto trans">
                         <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
                             <img src="./img/img-react-2.png" alt="" class="img">
@@ -348,21 +376,32 @@
                             <p class="fs-4 mt-3 lead">React.js</p>
                         </div>
                         <div>
-                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
-                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
+                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/ecommerce" target="_blank">
+                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            </a>
                         </div>
                     </article>
+                    <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE por el profesor, para enseñar este lenguaje -->
+                    <!-- Tiene mi toque personal en cuanto a maquetación, por lo que difiere del original -->
                     <article class="proyecto trans">
                         <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="" class="img"></a>
                         <div class="info">
                             <p class="fs-4 m-0">App de pacientes</p>
-                            <p class="fs-4 mt-3 lead">Programa ONE (pronto)</p>
+                            <p class="fs-4 mt-3 lead">Del Programa ONE (pronto)</p>
                         </div>
                         <div>
-                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
-                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            <a href="#">
+                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="#">
+                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                            </a>
                         </div>
                     </article>
+                    <!-- Carrito de compras, proyecto realizado con JS, para practicar una funcionalidad muy solicitada en el desarrollo Front-end -->
                     <article class="proyecto trans">
                         <a href="#" target="_blank">
                             <img src="./img/img-carritoDeCompras.jpg" alt="" class="img">
@@ -372,8 +411,12 @@
                             <p class="fs-4 mt-3 lead">JavaScript (pronto)</p>
                         </div>
                         <div>
-                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
-                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver código</button>
+                            <a href="#">
+                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="#">
+                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver código</button>
+                            </a>
                         </div>
                     </article>
                     <!-- <article class="proyecto trans">
