completando la sección de formación

--- a/index.html
+++ b/index.html
@@ -266,6 +266,54 @@
             <div class="contenedor formacionTexto">
                 <p class="resumen">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur nulla dolorum eligendi obcaecati saepe, possimus temporibus asperiores laboriosam ea doloremque commodi necessitatibus! Veritatis, ipsum libero sint quo porro blanditiis ad?</p>
             </div>
+            <div class="container">
+                <div class="proyectos">
+                    <!-- Profesorado de matemática -->
+                    <article id="proyectoCoderhouse" class="proyecto trans">
+                        <a href="https://isfd45-bue.infd.edu.ar/sitio/" target="_blank">
+                            <img src="img/profesorado.png"
+                                alt="imagen de la portada de inicio del I.S.F.D. N° 45" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Profesorado de matemática</p>
+                            <p class="fs-4 mt-3 lead">2010-2018 Terminado</p>
+                        </div>
+                    </article>
+                    <!-- Desarrollador Front-end React -->
+                    <article id="proyectoCoderhouse" class="proyecto trans">
+                        <a href="https://www.coderhouse.com/certificados/61c37d0347aaf1005d0eb0d9" target="_blank">
+                            <img src="img/certificado-front-end.png"
+                                alt="imagen del certificado de mi carrera de Desarrollador Front-end React" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Desarrollador Front-end React</p>
+                            <p class="fs-4 mt-3 lead">2021 mar-dic</p>
+                        </div>
+                    </article>
+                    <!-- Desarrollador backend -->
+                    <article id="proyectoCoderhouse" class="proyecto trans">
+                        <a href="https://www.coderhouse.com/online/carrera-online-desarrollo-fullstack" target="_blank">
+                            <img src="img/desarrollo-full-stack.png"
+                                alt="imagen de la carrera de desarrollo full stack en Coderhouse" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Desarrollador backend</p>
+                            <p class="fs-4 mt-3 lead">En curso</p>
+                        </div>
+                    </article>
+                    <!-- Programa ONE -->
+                    <article id="proyectoCoderhouse" class="proyecto trans">
+                        <a href="https://www.oracle.com/ar/education/oracle-next-education/" target="_blank">
+                            <img src="img/programa-ONE.png"
+                                alt="imagen del nombre del programa ONE con su slogan" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Programa ONE</p>
+                            <p class="fs-4 mt-3 lead">En curso</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </section>
         <!-- Fin de la sección de formación -->
 
@@ -273,7 +321,7 @@
         <section>
             <h2 id="trabajos" class="titulo fs-1">Proyectos</h2>
             <div class="container">
-                <div id="proyectos" class="mt-4">
+                <div class="proyectos" class="mt-4">
                     <!-- Sitio web, creado como desafío y proyecto para el curso de desarrollo web de Coderhouse -->
                     <article id="proyectoCoderhouse" class="proyecto trans">
                         <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
