agregando texto a la sección de formación

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <section>
             <h2 id="formacion" class="titulo fs-1">Formación</h2>
             <div class="contenedor formacionTexto">
-                <p class="resumen">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur nulla dolorum eligendi obcaecati saepe, possimus temporibus asperiores laboriosam ea doloremque commodi necessitatibus! Veritatis, ipsum libero sint quo porro blanditiis ad?</p>
+                <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en udemy, que siempre me sirven para profundizar en tecnología y complementar las formaciones</p>
             </div>
             <div class="container">
                 <div class="proyectos">
