mejorando los estilos y borrando imágenes

--- a/index.html
+++ b/index.html
@@ -145,39 +145,40 @@
                 <h3 class="habilidades fs-4 m-4 mt-5">Technical skills:</h3>
                 <div class="cajaSkills mb-5">
                     <div>
-                        <img src="img/git-alt-brands.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
+                        <img src="./img/git.svg" class="iconoSkill" alt="logo de Git">
                         <p class="nombreIcono lead">Git</p>
                     </div>    
                     <div>
-                        <img src="img/github-brands.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/github-brands.svg" class="iconoSkill" alt="logo de GitHub">
                         <p class="nombreIcono lead">GitHub</p>
                     </div>    
                     <div>
-                        <img src="img/HTML5.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/HTML5.svg" class="iconoSkill" alt="logo de HTML5">
                         <p class="nombreIcono lead">HTML5</p>
                     </div>    
                     <div>
-                        <img src="img/css3.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/css3.svg" class="iconoSkill" alt="logo de CSS3">
                         <p class="nombreIcono lead">CSS3</p>
                     </div>    
                     <div>
-                        <img src="img/icons8-bootstrap.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/icons8-bootstrap.png" class="iconoSkill" alt="logo de Bootstrap">
                         <p class="nombreIcono lead">Bootstrap</p>
                     </div>    
                     <div>
-                        <img src="img/sass.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/sass.svg" class="iconoSkill" alt="logo de SASS">
                         <p class="nombreIcono lead">SASS</p>
                     </div>    
                     <div>
-                        <img src="img/javascript.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/javascript.svg" class="iconoSkill" alt="logo de JavaScript">
                         <p class="nombreIcono lead">JavaScript</p>
                     </div>    
                     <div>
-                        <img src="img/react.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/react.svg" class="iconoSkill" alt="logo de React">
                         <p class="nombreIcono lead">React</p>
                     </div>    
                     <div>
-                        <img src="img/firebase.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/firebase.svg" class="iconoSkill" alt="logo de Firebase">
                         <p class="nombreIcono lead">Firebase</p>
                     </div>    
                     <!-- <div>
@@ -192,66 +193,66 @@
                 <h3 class="habilidades fs-4 m-4">Soft skills:</h3>
                 <div class="cajaSkills mb-5">
                     <div class="m-2">
-                        <img src="img/resiliencia.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/resiliencia.png" class="iconoSkill" alt="resiliencia, mente positiva">
                         <p class="nombreIcono lead">Resiliencia</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/liderazgo.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/liderazgo.png" class="iconoSkill" alt="liderazgo">
                         <p class="nombreIcono lead">Liderazgo</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/sentido.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/sentido.png" class="iconoSkill" alt="sentido común">
                         <p class="nombreIcono lead m-0">Sentido</p>
                         <p class="nombreIcono lead m-0">Común</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/pens-critico.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/pens-critico.png" class="iconoSkill" alt="pensamiento crítico">
                         <p class="nombreIcono lead m-0">Pensamiento</p>
                         <p class="nombreIcono lead m-0">Crítico</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/proactividad.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/proactividad.png" class="iconoSkill" alt="proactividad">
                         <p class="nombreIcono lead">Proactividad</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/pens-autonomia.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/pens-autonomia.png" class="iconoSkill" alt="autonomía">
                         <p class="nombreIcono lead">Autonomía</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/lista-de-verificacion.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/lista-de-verificacion.png" class="iconoSkill" alt="compromiso">
                         <p class="nombreIcono lead">Compromiso</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/responsabilidad.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/responsabilidad.png" class="iconoSkill" alt="responsabilidad">
                         <p class="nombreIcono lead">Responsabilidad</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/entusiasmo.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/entusiasmo.png" class="iconoSkill" alt="entusiasmo">
                         <p class="nombreIcono lead">Entusiasmo</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/motivacion.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/motivacion.png" class="iconoSkill" alt="motivación">
                         <p class="nombreIcono lead">Motivación</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/concentracion.png" class="iconoSkill" alt="imagen de HTML5">
-                        <p class="nombreIcono lead">concentración</p>
+                        <img src="img/concentracion.png" class="iconoSkill" alt="concentración">
+                        <p class="nombreIcono lead">Concentración</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/comunicacion.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/comunicacion.png" class="iconoSkill" alt="comunicación">
                         <p class="nombreIcono lead">Comunicación</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/flexibilidad.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/flexibilidad.png" class="iconoSkill" alt="flexibilidad">
                         <p class="nombreIcono lead">Flexibilidad</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/gestion-del-tiempo.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/gestion-del-tiempo.png" class="iconoSkill" alt="gestión del tiempo">
                         <p class="nombreIcono lead m-0">Gestión del</p>
                         <p class="nombreIcono lead m-0">tiempo</p>
                     </div>
                     <div class="m-2">
-                        <img src="img/trabajo-equipo.png" class="iconoSkill" alt="imagen de HTML5">
+                        <img src="img/trabajo-equipo.png" class="iconoSkill" alt="trabajo en equipo">
                         <p class="nombreIcono lead m-0">Trabajo</p>
                         <p class="nombreIcono lead m-0">en equipo</p>
                     </div>
@@ -263,8 +264,10 @@
         <!-- Sección de formación -->
         <section>
             <h2 id="formacion" class="titulo fs-1">Formación</h2>
-            <div class="contenedor formacionTexto">
-                <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en udemy, que siempre me sirven para profundizar en tecnología y complementar las formaciones</p>
+            <div class="contenedor sobreMi">
+                <div class="sobreMiTexto">
+                    <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en udemy, entre otros, que siempre me sirven para profundizar en tecnología y complementar las formaciones.</p>
+                </div>
             </div>
             <div class="container">
                 <div class="proyectos">
@@ -538,6 +541,7 @@
     </footer>
     <!-- Acá termina el pie de página -->
 
+    <script src="assets/js/all.js"></script>
     <!-- Enlace a JavaScript local -->
     <script src="./assets/js/main.js"></script>
     <!-- Enlace a JavaScript de bootstrap local -->
