mejorando los estilos

--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@
                             <p class="fs-4 m-0">Proyecto-Coderhouse</p>
                             <p class="fs-4 mt-3 lead">Sitio Web</p>
                         </div>
-                        <div>
+                        <div class="d-flex">
                             <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
-                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/proyecto-coderhouse" target="_blank">
-                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
@@ -353,30 +353,30 @@
                             <p class="fs-4 m-0">Portafolio</p>
                             <p class="fs-4 mt-3 lead">Bootstrap 5</p>
                         </div>
-                        <div>
+                        <div class="d-flex">
                             <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
-                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/bootstrap-portafolio" target="_blank">
-                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
                     <!-- Agenda de clientes, realizada como desafío y proyecto para el curso de JavaScript de Coderhouse -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank">
-                            <img src="./img/agenda.png" alt="" class="img">
+                            <img src="./img/agenda.png" alt="imagen de una agenda de clientes" class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Agenda de clientes</p>
                             <p class="fs-4 mt-3 lead">JavaScript</p>
                         </div>
-                        <div>
+                        <div class="d-flex">
                             <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank">
-                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/agenda-de-clientes" target="_blank">
-                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
@@ -390,12 +390,12 @@
                             <p class="fs-4 m-0">Encriptador</p>
                             <p class="fs-4 mt-3 lead">JavaScript</p>
                         </div>
-                        <div>
+                        <div class="d-flex">
                             <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
-                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/encriptador" target="_blank">
-                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
@@ -408,12 +408,12 @@
                             <p class="fs-4 m-0">Ahorcado</p>
                             <p class="fs-4 mt-3 lead">JavaScript</p>
                         </div>
-                        <div>
+                        <div class="d-flex">
                             <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
-                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/ahorcado-js" target="_blank">
-                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
@@ -426,12 +426,12 @@
                             <p class="fs-4 m-0">Ecommerce</p>
                             <p class="fs-4 mt-3 lead">React.js</p>
                         </div>
-                        <div>
+                        <div class="d-flex">
                             <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
-                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/ecommerce" target="_blank">
-                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
@@ -443,12 +443,12 @@
                             <p class="fs-4 m-0">App de pacientes</p>
                             <p class="fs-4 mt-3 lead">Del Programa ONE (pronto)</p>
                         </div>
-                        <div>
+                        <div class="d-flex">
                             <a href="#">
-                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="#">
-                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
@@ -461,12 +461,12 @@
                             <p class="fs-4 m-0">Carrito de compras</p>
                             <p class="fs-4 mt-3 lead">JavaScript (pronto)</p>
                         </div>
-                        <div>
+                        <div class="d-flex">
                             <a href="#">
-                                <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="#">
-                                <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver código</button>
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver código</button>
                             </a>
                         </div>
                     </article>
