--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="cajaSkills mb-5">
                     <div>
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
-                        <img src="./img/git.svg" class="iconoSkill" alt="logo de Git">
+                        <img src="img/git.svg" class="iconoSkill" alt="logo de Git">
                         <p class="nombreIcono lead">Git</p>
                     </div>    
                     <div>
