Agregando los logos de Figma y Trello a la sección de skills

--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
                 <div class="cajaSkills mb-5">
                     <div>
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
+                        <img src="img/icons8-figma.svg" class="iconoSkill" alt="logo de Figma">
+                        <p class="nombreIcono lead">Figma</p>
+                    </div>    
+                    <div>
+                        <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
+                        <img src="img/icons8-trello.svg" class="iconoSkill" alt="logo de Trello">
+                        <p class="nombreIcono lead">Trello</p>
+                    </div>    
+                    <div>
+                        <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
                         <img src="img/git-alt-brands.svg" class="iconoSkill" alt="logo de Git">
                         <p class="nombreIcono lead">Git</p>
                     </div>    
